<resources>
    <string name="app_name">Chúc TếT</string>
    <string-array name="hay">

        <item>Chúc mừng năm mới! Sung sướng trong tình yêu, sung túc trong công việc và sung mãn trong sức khỏe bạn nhé</item>
        <item>Kính chúc tất cả mọi người đón chào 1 năm mới thật vui, thật nhiều tiếng cười. Năm mới sức khỏe dồi dào, gặp được nhiều may mắn, thuận lợi,.. từ đó sẽ gặt hái được nhiều thành công mới!</item>
        <item>Chúc năm Mậu Tuất thành công luôn tới, sức khỏe tuyệt vời, may mắn khắp nơi, làm nhiều điều mới.</item>
        <item>Anh năm anh mới đã tới, đã tới 2018. Happy new year!</item>
        <item>Chúc mừng năm mới, Chúc mọi người những điều tốt lành nhất, may mắn sức khỏe dồi dào gia đình vui vẻ và hạnh phúc.</item>
        <item>Happy new year 2018, Good luck for you 2018.</item>
        <item>Năm mới zui zẻ !!!!!!!!!!! happy new year 2018.</item>
        <item>Chúc mừng năm mới. Hãy giữ lại những quá khứ đẹp để động viên bản thân và bạn bè! Hãy quên đi những dĩ vãng buồn để cuộc đời ý nghĩa hơn! Một năm mới với nhiều niềm tin sẽ thành sự thật! Mỹ mãn, mỹ mãn!  Năm mới đã tới, hai không mười bảy, là năm rất đẹp, rất nhiều điều may, chẳng phải quá hay, chúc mừng năm mới.</item>
        <item>Nhân dịp năm mới, cầu mong cho những đều tốt đẹp nhất sẽ đến với tất cả các bạn. Ai cũng đẹp... Ai cũng xinh... Ai cũng lung linh... Chúc các bạn có một năm mới hạnh phúc bên người thân và gia đình.</item>
        <item>Năm mới, con chúc cả gia đình mình một năm an khang và hạnh phúc, một năm bình an về sức khoẻ, thăng hoa về tiền bạc. Yêu lắm gia đình nhỏ bé của con! Hãy cùng nhau nắm tay, chung tay xây dựng một gia đình hạnh phúc an khang.</item>
        <item>Chúc các ông các bà sống lâu trăm tuổi cùng con cháu. Các cô các chú thành công trong công việc. Các em tiền đầy túi tình đầy tim nhé. Riêng các cháu nhỏ thì ngoan ngoãn, học hành chăm chỉ. Chúc mừng năm mới!</item>
        <item>Nhân dịp năm mới, chúc cho toàn thể anh chị em, con cháu trong gia chung họ ....(Trần,Nguyễn...) 1 năm an khang, thịnh vượng, tấn tài tấn lộc, 1 năm bình an, tiền vài như nước... Ai đang công tác thì thành đạt, vạn sự hạnh thông, ai đang đi học thì giỏi giang, tiến bộ... Toàn gia hạnh phúc, sum vầy, yêu thương, đùm bọc lẫn nhau.</item>
        <item>Chúc bạn: 12 tháng phú quý, 365 ngày phát tài, 8760 giờ sung túc, 525600 phút thành công 31536000 giây vạn sự như ý.</item>
        <item>Năm mới chúc nhau sức khỏe nhiều. Bạc tiền rủng rỉnh thoải mái tiêu. Gia đình hạnh phúc bè bạn quý. Thanh thản vui chơi mọi buổi chiều.</item>
        <item>Chúc cho gia đình mình luôn mãi đầy ắp tiếng cười, tài lộc luôn sung túc và hạnh phúc luôn ngập tràn. Hình ảnh con trẻ với khí thế của ngày đầu năm, cầu mong cho gia đình luôn mạnh khỏe và an lành.</item>
        <item>Tân niên kính chúc mọi nhà. An khang đầm ấp đậm đà tình thương. Người người hạnh phúc ấm nồng. Chắng còn khổ lụy đau buồn cô đơn. Độc thân sớm có tình hồng. Yêu thương xin chúc mặn nồng mãi thôi. Kính chúc tất cả mọi người. Năm mới hạnh phúc rạng ngời thành công.</item>
        <item>Chiềng làng chiềng xã, thượng hạ đông tây, xa gần đó đây, vểnh tai nghe chúc:  Tân niên sung túc, lắm phúc nhiều duyên, trong túi nhiều tiền, tâm hồn vui sướng.</item>
        <item>Chúc mọi người khoẻ như hổ, sống lâu như rùa, mắt tinh như đại bàng, nhanh nhẹn như thỏ, tinh ranh như cáo, ăn nhiều như … heo, mau ăn chóng nhớn, tiền vô như nước, phúc lộc nhiều như dịch châu chấu tràn về.</item>
        <item>Mùa xuân xin chúc - Khúc ca an bình - Năm mới phát tài - Vạn sự như ý - Già trẻ lớn bé - Đầy ắp tiếng cười - Trên mặt ngời ngời - Tràn đầy hạnh phúc - Xuân đến hy vọng - Ấm no mọi nhà - Kính chúc ông bà - Sống lâu trăm tuổi - Kính chúc ba mẹ - Sức khoẻ dồi dào - Đôi lứa yêu nhau - Càng thêm nồng ấm - Các em bé nhỏ - Học giỏi chăm ngoan - Chúc Tết mọi người - Năm mới hoan hỉ - Gặp nhiều niềm vui…</item>
        <item>Chúc mừng năm mới 2018, chúc mọi điều bằng an và tốt đẹp tới bạn và gia đình.</item>
        <item>2018, 8 thì quá phát, 1 năm may mắn, 0 gì cản trở, 2 mình tiến lên. Chúc mừng năm mới.</item>
        <item>Chúc mọi điều tốt đẹp trong năm mới nhé. Happy new year!</item>
        <item>Năm mới chúc nhau sức khỏe nhiều. Bạc tiền rủng rỉnh thoải mái tiêu. Happy New Year 2018 !!!</item>
        <item>1 năm mới, 1 tuổi mới,nhiều bạn mới, nhiều hiểu biết mới và 1 lời chúc Mãi mãi hạnh phúc bên gia đình và những người thân yêu nhất.</item>
        <item>Chúc các bạn nhiều lý do để vui vẻ năm tới!</item>
        <item>Chúc bạn luôn vui vẻ, bình an và hạnh phúc trong năm mới!</item>
        <item>Chúc năm mới: 1 vợ, 2 con, nhà 3 tầng, xe 4 chỗ!</item>
        <item>Chúc mọi người hay ăn chóng béo, tiền nhiều như kẹo, tình chặt như keo, dẻo dai như mèo, mịn màng trắng trẻo, sức khỏe như voi.</item>
        <item>Năm mới năm me. Gia đình mạnh khỏe. Mọi người tươi trẻ. Đi chơi vui vẻ.</item>
        <item>Chúc mừng năm mới! Sung sướng trong tình yêu, sung túc trong công việc và sung mãn trong sức khỏe em nhé.</item>
        <item>Chúc mọi người năm mới, tiền vào bạc tỉ, tiền ra rỉ rỉ, miệng cười hi hi, vạn sự như ý, cung hỉ, cung hỉ!</item>
        <item>Chúc cả gia đình bạn vạn sự như ý Tỉ sự như mơ Triệu điều bất ngờ Không chờ cũng đến!</item>
        <item>Chúc các bạn có 1 cái tết vui vẻ, hạnh phúc, vạn sự như ý, “Tiền vào như nước sông Đà. Tiền ra nhỏ giọt như cà phê phin”</item>
        <item>Chúc các bạn có nhiều người để ý. Tỏ tình nhiều ý. Tiền nhiều nặng ký. Công việc vừa ý. Miệng cười mắt ti hí. Sống Lâu Một tí.</item>
        <item>Chúc mừng năm mới bách nhẫn thái hòa. Chúc mừng năm mới phúc sinh lễ nghĩa gia đình thịnh Lộc tiền vinh hoa phú quý xuân!</item>
        <item>Chúc mừng năm mới tấn tài, tấn lộc Chúc mừng năm mới ngũ phúc lâm môn.</item>
        <item>Chúc mừng năm mới Xuân đến gia đình vui xum họp Tết về con cháu hưởng bình an</item>

    </string-array>
    <string-array name="tho">

                <item>
Vợ ơi anh bảo vợ này
Xuân sang tết đến anh say mất rồi
Say là say mắt vợ cười
Say là say cái duyên tươi mỗi lần
Trên đời bao thứ đẹp xinh
Nhưng mà anh cũng có cần chi đâu
Vì anh có vợ tình sâu
Vì anh có vợ đứng đầu đảm đang
Xuân về chúc vợ đẹp sang
Mãi là ngọc nữ, bà hoàng nhà anh</item>

        <item>Vui vẻ, lạc quan Yêu đời phơi phới
            Hạnh phúc sẽ tới
            Niềm vui sẽ về
            Chúc mừng năm mới 2018.</item>
        <item>Chúc năm mới:
            Vừa đủ HẠNH PHÚC để giữ tâm hồn bạn được ngọt ngào.
            Vừa đủ THỬ THÁCH để giữ bạn luôn kiên nhẫn.
            Vừa đủ MUỘN PHIỀN để giữ bạn thật sự tỉnh táo.
            Vừa đủ HY VỌNG để cho bạn được hạnh phúc.
            Vừa đủ THẤT BẠI để bạn mãi khiêm nhường.
            Vừa đủ THÀNH CÔNG để giữ bạn mãi nhiệt tâm.
            Vừa đủ BẠN BÈ để bạn được an ủi.
            Vừa đủ VẬT CHẤT để đáp ứng các nhu cầu vật chất của bạn.
            Vừa đủ NHIỆT TÌNH để bạn cho đời thêm hân hoan.
            Vừa đủ NIỀM TIN để xua tan những thất vọng.</item>
        <item>Một năm vất vả
            Thế là đã qua
            Ta chào năm mới
            Chúc nhau lời ca
            Bình an vô sự, mọi điều tốt lành
            Chúc mừng năm mới.</item>
        <item>Mừng năm mới
            Kính chúc bạn
            Sức khỏe dồi dào
            Vạn sự như ý
            Gia đình hòa thuận
            Chuyện vui đến nhiều
            Chuyện buồn không ghé
            Luôn luôn an lạc
            Làm ăn tấn tới
            Một vốn bốn lời
            Thời cơ đang đợi.</item>
        <item>Chúc mừng năm mới
            Công danh sáng ngời
            May mắn khắp nơi
            Đổ về tơi tới.</item>
        <item>Chúc mừng năm mới
            Tâm trí thảnh thơi
            Thỏa mái vui chơi
            Đời luôn tươi mới.</item>
        <item>Chúc mừng năm mới
            Sức khỏe vô đối
            Bệnh viện không tới
            Bác sỹ chả chơi.</item>
        <item>Chúc mừng năm mới
            Đôi lứa khắp nơi
            Tình cảm sáng ngời
            Yêu không vụ lợi.</item>
        <item>Chúc mừng năm mới
            Hạnh phúc, yêu đời
            Người người nơi nơi
            Niềm vui phơi phới
            Chúc mừng năm mới 2018.
        </item>
        <item>Thần thời gian xoay tròn mùa hạ
            Thu qua rồi đông mới chia tay
            Ngày xuân đã rộng vòng tay
            Đón người sum họp vui vầy mừng xuân
            Ông bà con cháu quây quần
            Gia đình sung túc vang ngân nụ cười
            Nếm vị hạnh phúc đầu môi
            Chúc cho mọi người năm mới an vinh
            Chúc cho cuộc sống thanh bình
            Mạnh khỏe sung túc thêm tình thêm vui
            Chúc cho vang mãi nụ cười
            Ông bà mạnh khỏe nghỉ ngơi an nhàn
            Chúc anh chúc chị thăng quan
            Công tác thuận lợi chứa chan lộc về
            Chúc cho con cháu đề huề
            Học giỏi ngoan ngoãn rinh về bằng khen
            Vợ chồng tình cảm chứa chan
            Chúc cho cuộc sống là ngàn ngày vui
            Ngoài kia pháo nổ vang trời
            Chấm vào thời khắc đất trời sang xuân.
        </item>

        <item>
            Mãi mãi bên em tiếng Thầy vang vọng
            Đã xa rồi mà cứ ngỡ hôm qua.
            Bao lữ khách đi về trên bến vắng.
            Người qua sông ai nhớ bến sông đời.
            Từng dòng chữ suốt một đời lặng lẽ.
            Vẫn âm thầm như bụi phấn rơi rơi.
            Thầy cô như ánh nến soi tỏ đêm khuya.
            Như tấm bảng đen vẽ nên kiến thức trong mỗi học trò.
            Dẫu mai đi bốn phương trời những lời thầy dạy đời đời khắc ghi.
            KÍNH CHÚC THẦY CÔ NĂM MỚI AN KHANH THỊNH VƯỢNG GIA ĐÌNH SỨC KHỎE</item>

        <item>
            Xuân Chúc Thầy:
            Xuân mới đến, 2017
            Sự bình an, sánh bước cùng Thầy
            Gia Đình, hạnh phúc xum vầy
            An khang, thịnh Vượng, ngày ngày luôn xuân
            Công danh giữa chốn thương trường
            Trên yêu, dưới mến, cầm cương vững vàng
            Chiến công, thành tựu huy hoàng
            Luôn mang ý đẹp
            Rạng danh công thầy.

            Chúc thầy năm mới con chó. Gia đình sum họp ấy là niềm vui. Chúc thầy năm mới rạng ngời. Trời cho thầy khỏe giúp thuyền vươn xa

            Xuân chúc Cô:
            Xuân mới 2017
            Con chúc Cô vạn ý viên thành
            Gia Đình hưởng trọn yên Bình
            Lộc tài thịnh vượng, thắm tình như xuân
            Trên yêu mến, dưới thương toại ý
            Công danh luôn thành ý, toại lòng
            Cô luôn kết quả, thành công
            Xuân vui hoa nở, tổ tông mỉm cười</item>

    </string-array>
    <string name="sendSms">Gửi sms</string>
    <string name="mau">Gửi lời chúc tết</string>
    <string name="home">Trang chủ</string>
    <string name="share">Chia sẻ</string>
    <string name="sendMessage">Gửi messager</string>
    <string name="info">Thông tin về sản phẩm</string>
    <string name="cmmm">Chúc mừng năm mới 2018</string>
    <string name="cmmmen">HAPPY NEW YEAR</string>
    <string name="banner_home_footer">ca-app-pub-5500691912127373/4907239187</string>
</resources>