<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:id="@+id/drawerll"
    android:fitsSystemWindows="true"
    tools:context="io.qthjen_dev.tet.Activity.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/viewGroupMenu"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarMenu"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout

                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsingtoolbar"
                app:contentScrim="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tet23"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/home"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"/>

                <!-- toolBar phải fitSystemWindow = false để
                    các icon nằm dưới thanh status -->

                <android.support.v7.widget.Toolbar
                    android:fitsSystemWindows="false"
                    android:minHeight="?attr/actionBarSize"
                    android:id="@+id/tbar"
                    app:layout_collapseMode="pin"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:background="@color/white"
            android:layout_marginTop="@dimen/nestedMargin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewMenu"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView
            android:layout_gravity="bottom"
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_home_footer">

        </com.google.android.gms.ads.AdView>

        <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/smallRadius"
            android:layout_marginLeft="@dimen/mediumMargin"
            android:layout_marginRight="@dimen/mediumMargin"
            android:layout_marginTop="@dimen/marginLarge"
            app:layout_anchorGravity="bottom"
            app:layout_anchor="@+id/appBarMenu"
            app:cardBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/largeElevation"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:background="@color/white"
                android:textColor="@color/appllenew"
                android:paddingBottom="@dimen/smallMargin"
                android:paddingTop="@dimen/bigMargin"
                android:paddingLeft="@dimen/mediumMargin"
                android:textStyle="bold"
                android:textSize="@dimen/superLargeText"
                android:text="@string/mau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        </android.support.v7.widget.CardView>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationMain"
        android:background="@color/white"
        android:layout_gravity="start"
        android:layout_width="@dimen/navigationViewWidth"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagecmmm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/collapsingtoolbar"
                android:src="@drawable/tet28"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card3"
                android:layout_below="@+id/imagecmmm"
                android:layout_marginLeft="@dimen/marginLarge"
                android:layout_marginTop="@dimen/marginLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/about"
                    android:paddingLeft="@dimen/mediumMargin"
                    android:paddingBottom="@dimen/marginLarge"
                    android:paddingTop="@dimen/marginLarge"
                    android:textSize="@dimen/quiteText"
                    android:textColor="@color/textBlack"
                    android:text="@string/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

            <TextView
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/margincmm"
                android:id="@+id/tvCmmm"
                android:layout_below="@+id/card3"
                android:textSize="@dimen/superLargeText"
                android:textColor="@color/calendar"
                android:text="@string/cmmm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:gravity="center_horizontal"
                android:layout_below="@+id/tvCmmm"
                android:textSize="@dimen/superLargeText"
                android:textColor="@color/calendar"
                android:text="@string/cmmmen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
