<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.qthjen_dev.tet.Activity.EditAndSend"
    android:background="@color/white">

    <include layout="@layout/toolbar_layout"
        android:id="@+id/tbar_editAndSend"/>

    <ScrollView
        android:layout_below="@+id/tbar_editAndSend"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cardTmp1"
                android:layout_margin="@dimen/marginLarge"
                app:cardElevation="@dimen/largeElevation"
                app:cardCornerRadius="@dimen/smallRadius"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textSend">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/etSend"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textSend">

                        <EditText
                            android:paddingLeft="@dimen/marginLarge"
                            android:paddingTop="@dimen/smallMargin"
                            android:paddingBottom="@dimen/smallMargin"
                            android:paddingRight="@dimen/smallMargin"
                            android:background="@color/searchbg"
                            android:backgroundTint="@android:color/transparent"
                            android:gravity="top"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </android.support.design.widget.TextInputLayout>

                </ScrollView>

            </android.support.v7.widget.CardView>
            
            <LinearLayout
                android:layout_marginLeft="@dimen/marginLarge"
                android:layout_marginRight="@dimen/marginLarge"
                android:layout_below="@+id/cardTmp1"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/smallRadius"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/largeElevation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:gravity="center"
                        android:background="@color/white"
                        android:id="@+id/bt_share"
                        android:textAllCaps="false"
                        android:text="@string/share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    android:id="@+id/card2"
                    app:cardCornerRadius="@dimen/smallRadius"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/largeElevation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:gravity="center"
                        android:background="@color/white"
                        android:id="@+id/bt_sendMessage"
                        android:textAllCaps="false"
                        android:text="@string/sendMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    android:id="@+id/card1"
                    app:cardCornerRadius="@dimen/smallRadius"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/largeElevation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <Button
                        android:gravity="center"
                        android:background="@color/white"
                        android:textAllCaps="false"
                        android:text="@string/sendSms"
                        android:id="@+id/bt_sendSms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:layout_below="@+id/cardTmp1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/btloginMargin"
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">

    </com.google.android.gms.ads.AdView>

</RelativeLayout>
